// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<button
  className="button"
  disabled={false}
  type="submit"
>
  Test
</button>
`;

exports[` 2`] = `
<button
  className="button"
  disabled={false}
  type="reset"
>
  Test
</button>
`;

exports[`Button snapshot tests should render button properly 1`] = `
<button
  className="button"
  disabled={false}
  type="button"
>
  Test
</button>
`;

exports[`Button snapshot tests with disabled prop should render button with disabled as true 1`] = `
<button
  className="button"
  disabled={true}
  type="button"
>
  Test
</button>
`;

exports[`Button snapshot tests with modifier block should render button properly 1`] = `
<button
  className="button button--block"
  disabled={false}
  type="button"
>
  Test
</button>
`;

exports[`Button snapshot tests with modifier compose by primary and large and block should render button properly 1`] = `
<button
  className="button button--primary button--large button--block"
  disabled={false}
  type="button"
>
  Test
</button>
`;

exports[`Button snapshot tests with modifier large should render button properly 1`] = `
<button
  className="button button--large"
  disabled={false}
  type="button"
>
  Test
</button>
`;

exports[`Button snapshot tests with modifier medium should render button properly 1`] = `
<button
  className="button button--medium"
  disabled={false}
  type="button"
>
  Test
</button>
`;

exports[`Button snapshot tests with modifier primary should render button properly 1`] = `
<button
  className="button button--primary"
  disabled={false}
  type="button"
>
  Test
</button>
`;

exports[`Button snapshot tests with modifier secondary should render button properly 1`] = `
<button
  className="button button--secondary"
  disabled={false}
  type="button"
>
  Test
</button>
`;

exports[`Button snapshot tests with modifier tertiary should render button properly 1`] = `
<button
  className="button button--tertiary"
  disabled={false}
  type="button"
>
  Test
</button>
`;
